Migrate Bracket for Ctrl-Alt-GG
