# backend/openapi/openapi.json
@@ -1,6 +1,37 @@
 {
   "components": {
     "schemas": {
+      "AuthFeatureFlags": {
+        "properties": {
+          "password_reset_enabled": {
+            "default": false,
+            "title": "Password Reset Enabled",
+            "type": "boolean"
+          },
+          "user_registration_enabled": {
+            "title": "User Registration Enabled",
+            "type": "boolean"
+          }
+        },
+        "required": [
+          "user_registration_enabled",
+          "password_reset_enabled"
+        ],
+        "title": "AuthFeatureFlags",
+        "type": "object"
+      },
+      "AuthFeatureFlagsResponse": {
+        "properties": {
+          "data": {
+            "$ref": "#/components/schemas/AuthFeatureFlags"
+          }
+        },
+        "required": [
+          "data"
+        ],
+        "title": "AuthFeatureFlagsResponse",
+        "type": "object"
+      },
       "Body_login_for_access_token_token_post": {
         "properties": {
           "client_id": {
@@ -247,19 +278,6 @@
           "data"
         ],
         "title": "CourtsResponse",
-        "type": "object"
-      },
-      "DemoUserToRegister": {
-        "properties": {
-          "captcha_token": {
-            "title": "Captcha Token",
-            "type": "string"
-          }
-        },
-        "required": [
-          "captcha_token"
-        ],
-        "title": "DemoUserToRegister",
         "type": "object"
       },
       "FullTeamWithPlayers": {
@@ -2509,6 +2527,10 @@
             "title": "Access Token",
             "type": "string"
           },
+          "name": {
+            "title": "Name",
+            "type": "string"
+          },
           "token_type": {
             "title": "Token Type",
             "type": "string"
@@ -2521,7 +2543,8 @@
         "required": [
           "access_token",
           "token_type",
-          "user_id"
+          "user_id",
+          "name"
         ],
         "title": "Token",
         "type": "object"
@@ -2812,8 +2835,7 @@
       },
       "UserAccountType": {
         "enum": [
-          "REGULAR",
-          "DEMO"
+          "REGULAR"
         ],
         "title": "UserAccountType",
         "type": "string"
@@ -2821,8 +2843,8 @@
       "UserPasswordToUpdate": {
         "properties": {
           "password": {
-            "maxLength": 48,
-            "minLength": 8,
+            "maxLength": 72,
+            "minLength": 12,
             "title": "Password",
             "type": "string"
           }
@@ -2844,6 +2866,7 @@
             "type": "string"
           },
           "email": {
+            "format": "email",
             "title": "Email",
             "type": "string"
           },
@@ -2880,11 +2903,8 @@
       },
       "UserToRegister": {
         "properties": {
-          "captcha_token": {
-            "title": "Captcha Token",
-            "type": "string"
-          },
           "email": {
+            "format": "email",
             "title": "Email",
             "type": "string"
           },
@@ -2900,8 +2920,7 @@
         "required": [
           "email",
           "name",
-          "password",
-          "captcha_token"
+          "password"
         ],
         "title": "UserToRegister",
         "type": "object"
@@ -2909,6 +2928,7 @@
       "UserToUpdate": {
         "properties": {
           "email": {
+            "format": "email",
             "title": "Email",
             "type": "string"
           },
@@ -2970,7 +2990,7 @@
         "flows": {
           "password": {
             "scopes": {},
-            "tokenUrl": "token"
+            "tokenUrl": "/token"
           }
         },
         "type": "oauth2"
@@ -2978,7 +2998,7 @@
     }
   },
   "info": {
-    "description": "\n### Description\nThis API allows you to do everything the frontend of [Bracket](https://github.com/evroon/bracket)\nallows you to do (the frontend uses this API as well).\n\nFore more information, see the [documentation](https://docs.bracketapp.nl).\n\n### Table of Contents\n*(links only work for [ReDoc](https://api.bracketapp.nl/redoc), not for Swagger UI)*\n\n- [Auth](#tag/Auth)\n\n- [Clubs](#tag/Clubs)\n\n- [Courts](#tag/Courts)\n\n- [Internals](#tag/Internals)\n\n- [Matches](#tag/Matches)\n\n- [Players](#tag/Players)\n\n- [Rankings](#tag/Rankings)\n\n- [Rounds](#tag/Rounds)\n\n- [Stage Items](#tag/Stage-Items)\n\n- [Stage Item Inputs](#tag/Stage-Item-Inputs)\n\n- [Stages](#tag/Stages)\n\n- [Teams](#tag/Teams)\n\n- [Tournaments](#tag/Tournaments)\n\n- [Users](#tag/Users)\n\n### Links\nGitHub: <https://github.com/evroon/bracket>\n\nDocs: <https://docs.bracketapp.nl>\n\nDemo: <https://www.bracketapp.nl/demo>\n\nAPI docs (Redoc): <https://api.bracketapp.nl/redoc>\n\nAPI docs (Swagger UI): <https://api.bracketapp.nl/docs>\n",
+    "description": "\n### Description\nThis API allows you to do everything the frontend of [Bracket](https://github.com/evroon/bracket)\nallows you to do (the frontend uses this API as well).\n\nFore more information, see the [documentation](https://docs.bracketapp.nl).\n\n### Table of Contents\n*(links only work for [ReDoc](https://api.bracketapp.nl/redoc), not for Swagger UI)*\n\n- [Auth](#tag/Auth)\n\n- [Clubs](#tag/Clubs)\n\n- [Courts](#tag/Courts)\n\n- [Internals](#tag/Internals)\n\n- [Matches](#tag/Matches)\n\n- [Players](#tag/Players)\n\n- [Rankings](#tag/Rankings)\n\n- [Rounds](#tag/Rounds)\n\n- [Stage Items](#tag/Stage-Items)\n\n- [Stage Item Inputs](#tag/Stage-Item-Inputs)\n\n- [Stages](#tag/Stages)\n\n- [Teams](#tag/Teams)\n\n- [Tournaments](#tag/Tournaments)\n\n- [Users](#tag/Users)\n\n### Links\nGitHub: <https://github.com/evroon/bracket>\n\nDocs: <https://docs.bracketapp.nl>\n\nAPI docs (Redoc): <https://api.bracketapp.nl/redoc>\n\nAPI docs (Swagger UI): <https://api.bracketapp.nl/docs>\n",
     "license": {
       "name": "AGPL-3.0",
       "url": "https://www.gnu.org/licenses/agpl-3.0.en.html"
@@ -2989,6 +3009,27 @@
   },
   "openapi": "3.1.0",
   "paths": {
+    "/auth/features": {
+      "get": {
+        "operationId": "get_auth_features_auth_features_get",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AuthFeatureFlagsResponse"
+                }
+              }
+            },
+            "description": "Successful Response"
+          }
+        },
+        "summary": "Get Auth Features",
+        "tags": [
+          "Internals"
+        ]
+      }
+    },
     "/clubs": {
       "get": {
         "operationId": "get_clubs_clubs_get",
@@ -3823,6 +3864,44 @@
       }
     },
     "/tournaments/{tournament_id}/logo": {
+      "get": {
+        "operationId": "get_tournament_logo_tournaments__tournament_id__logo_get",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "tournament_id",
+            "required": true,
+            "schema": {
+              "title": "Tournament Id",
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            },
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "summary": "Get Tournament Logo",
+        "tags": [
+          "Tournaments"
+        ]
+      },
       "post": {
         "operationId": "upload_logo_tournaments__tournament_id__logo_post",
         "parameters": [
@@ -4276,11 +4355,6 @@
             "description": "Validation Error"
           }
         },
-        "security": [
-          {
-            "OAuth2PasswordBearer": []
-          }
-        ],
         "summary": "Get Players",
         "tags": [
           "Players"
@@ -5968,6 +6042,53 @@
       }
     },
     "/tournaments/{tournament_id}/teams/{team_id}/logo": {
+      "get": {
+        "operationId": "get_team_logo_tournaments__tournament_id__teams__team_id__logo_get",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "tournament_id",
+            "required": true,
+            "schema": {
+              "title": "Tournament Id",
+              "type": "integer"
+            }
+          },
+          {
+            "in": "path",
+            "name": "team_id",
+            "required": true,
+            "schema": {
+              "title": "Team Id",
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            },
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "summary": "Get Team Logo",
+        "tags": [
+          "Teams"
+        ]
+      },
       "post": {
         "operationId": "update_team_logo_tournaments__tournament_id__teams__team_id__logo_post",
         "parameters": [
@@ -6151,47 +6272,6 @@
           }
         },
         "summary": "Register User",
-        "tags": [
-          "Users"
-        ]
-      }
-    },
-    "/users/register_demo": {
-      "post": {
-        "operationId": "register_demo_user_users_register_demo_post",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/DemoUserToRegister"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/TokenResponse"
-                }
-              }
-            },
-            "description": "Successful Response"
-          },
-          "422": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            },
-            "description": "Validation Error"
-          }
-        },
-        "summary": "Register Demo User",
         "tags": [
           "Users"
         ]
